Add Buber Pages

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hello Bulma!</title>
+    <title>Masjid Syamsul 'Ulum</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <link rel="stylesheet" href="asset/css/style.css">
@@ -57,7 +57,7 @@
         <div class="hero">
           <div class="hero-body">
             <div class="container">
-              <div class="title">Masjid Syamsul 'Ulum'</div>
+              <h1 class="title">Masjid Syamsul 'Ulum</h1>
               <div class="subtitle">Lorem ipsum dolor sit amet</div>
             </div>
           </div>
