--- a/imamdb.html
+++ b/imamdb.html
@@ -43,13 +43,13 @@
     	<div class="sidebar-wrapper">
 
             <ul class="nav">
-                <li class="active">
+                <li>
                     <a href="#">
                         <i class="ti-minus"></i>
                         <p>Dashboard</p>
                     </a>
                 </li>
-                <li>
+                <li class="active">
                     <a href="imamdb.html">
                         <i class="ti-minus"></i>
                         <p>Imam</p>
@@ -116,9 +116,21 @@
         <div class="content">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="card">
-                        <div class="header">
-                            
+                    <div class="col-md-12">
+                        <div class="card">
+                            <div class="header">
+                                <h4 class="title">Imam</h4>
+                            </div>
+                            <div class="content">
+                                <form action="">
+                                    <div class="form-group">
+                                        <input type="file" class="form-control">
+                                    </div>
+                                    <div class="form-group">
+                                        <button type="submit" class="btn">Input</button> 
+                                    </div>
+                                </form>
+                            </div>
                         </div>
                     </div>
                 </div>
